--- a/client/pages/TourEditor.css
+++ b/client/pages/TourEditor.css
@@ -375,5 +375,12 @@ h4 {
     width: 100vw;
     overflow: hidden;
     height: 100vh;
-    position: relative;
+    /* position: relative; */
+}
+
+.preview-toggle {
+    position: absolute;
+    top: 1.5%;
+    width: max-content;
+    right: 5%;
 }
